# cpp-cv

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  eval.cpp  main.cpp
cfg/: .env  .env.eval  .env.setup  build.sh  eval.sh  run.sh  test.sh  weights.sh
src/: detector.cpp  detector.hpp  model.cpp  model.hpp  utils.cpp  utils.hpp
test/: model_test.cpp  test.cpp
weights/: build_weights.sh  onnx_converter.py  requirements.txt
